# ollama-ipex

./: AGENTS.md  CHANGELOG.md  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml
src/ipex/: __init__.py  cli.py  config.py  config.yaml
